# 3777

./: .gitignore  CMakeLists.txt  theforgottenserver.exp  theforgottenserver.lib
data/actions/: actions.xml
data/actions/scripts/: stash_system.lua
data/items/: items.xml
schemas/: mysql.sql  sqlite.sql
src/: CMakeLists.txt  combat.cpp  config.h.in~  connection.cpp  connection.h  const.h  container.cpp  creature.cpp  creature.h  creatureevent.cpp  creatureevent.h  enums.h  game.cpp  game.h  house.cpp  iologindata.cpp  iologindata.h  iomap.cpp  iomapserialize.cpp  item.cpp  item.h  items.cpp  items.h  luascript.cpp  luascript.h  map.h  monster.cpp  monster.h  monsters.cpp  monsters.h  networkmessage.cpp  networkmessage.h  npc.cpp  npc.h  otserv.cpp  otsystem.h  outputmessage.cpp  player.cpp  player.h  protocolgame.cpp  (+12 more)
src/dev/: Makefile.win  TheForgottenServer.layout
